--- a/src/Components/Accordion/Accordion.css
+++ b/src/Components/Accordion/Accordion.css
@@ -15,7 +15,7 @@
     color: #F6E6C2;
     font-size: 1.2em;
     font-weight: bolder;
-    height: 70px;
+    /* height: 70px; */
     position: relative;
     
 }
